--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "SBData"
+  title: "SABdata"
   description: "Website"
   site-url: "https://denisberte.github.io/"
   repo-url: https://github.com/DenisBerte/denisberte.github.io
@@ -26,7 +26,7 @@ website:
         href: https://github.com/DenisBerte
         aria-label: Perfil GitHub
       - icon: envelope
-        href: "mailto:sbdata10@gmail.com"
+        href: "mailto:denis@sabdata.com.br"
         aria-label: Email
   favicon: "assets/logo.png"
   cookie-consent:
